The first self repackaged MQTTClient submission

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,8 @@
         "span": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "numeric": "cpp",
+        "cinttypes": "cpp"
     }
 }
