--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,14 @@
         "thread": "cpp",
         "xhash": "cpp",
         "numeric": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "regex": "cpp",
+        "any": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "unordered_set": "cpp",
+        "filesystem": "cpp",
+        "csignal": "cpp",
+        "variant": "cpp"
     }
 }
